--- a/index.html
+++ b/index.html
@@ -3,11 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hackaton 2</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+7G8A5D5F5vP5FMG15KFEHn1D5dK4" crossorigin="anonymous">
+    <title>Planificador de Cultivos</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+7G8A5D5F5vP5FMG15KFEHn1D5dK4" crossorigin="anonymous"></script>
+    <header>
+        <h1>Planificador de Cultivos Interactivo</h1>
+    </header>
+    <main>
+        <section id="calendar-section">
+            <h2>Calendario</h2>
+            <div id="calendar-controls">
+                <button id="prev-month">← Mes Anterior</button>
+                <span id="current-month">Diciembre 2024</span>
+                <button id="next-month">Mes Siguiente →</button>
+            </div>
+            <div id="calendar"></div>
+        </section>
+
+        <section id="crop-management">
+            <h2>Gestión de Cultivos</h2>
+            <ul id="crop-list"></ul>
+            <form id="add-crop-form">
+                <label for="crop-name">Nombre del Cultivo:</label>
+                <input type="text" id="crop-name" required>
+                <button type="submit">Agregar Cultivo</button>
+            </form>
+        </section>
+
+        <section id="planting-form-section">
+            <h2>Planificar Siembra</h2>
+            <form id="planting-form">
+                <label for="crop-select">Seleccionar Cultivo:</label>
+                <select id="crop-select"></select>
+
+                <label for="area">Área (hectáreas):</label>
+                <input type="number" id="area" required>
+
+                <label for="planting-date">Fecha:</label>
+                <input type="date" id="planting-date" required>
+
+                <button type="submit">Planificar</button>
+            </form>
+        </section>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
