--- a/index.html
+++ b/index.html
@@ -4,49 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planificador de Cultivos</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <header>
+<body class="bg-light">
+    <header class="bg-success text-white text-center py-3">
         <h1>Planificador de Cultivos Interactivo</h1>
     </header>
-    <main>
-        <section id="calendar-section">
-            <h2>Calendario</h2>
-            <div id="calendar-controls">
-                <button id="prev-month">← Mes Anterior</button>
-                <span id="current-month">Diciembre 2024</span>
-                <button id="next-month">Mes Siguiente →</button>
-            </div>
-            <div id="calendar"></div>
-        </section>
+    <main class="container my-4">
+        <div class="row">
+            <!-- Calendario -->
+            <section id="calendar-section" class="col-md-6 mb-4">
+                <div class="card">
+                    <div class="card-header bg-success text-white">
+                        <h2 class="h5 mb-0">Calendario</h2>
+                    </div>
+                    <div class="card-body">
+                        <div id="calendar-controls" class="d-flex justify-content-between mb-3">
+                            <button id="prev-month" class="btn btn-outline-success btn-sm">← Mes Anterior</button>
+                            <span id="current-month" class="fw-bold">Diciembre 2024</span>
+                            <button id="next-month" class="btn btn-outline-success btn-sm">Mes Siguiente →</button>
+                        </div>
+                        <div id="calendar" class="d-grid grid-template-columns-7 gap-2"></div>
+                    </div>
+                </div>
+            </section>
 
-        <section id="crop-management">
-            <h2>Gestión de Cultivos</h2>
-            <ul id="crop-list"></ul>
-            <form id="add-crop-form">
-                <label for="crop-name">Nombre del Cultivo:</label>
-                <input type="text" id="crop-name" required>
-                <button type="submit">Agregar Cultivo</button>
-            </form>
-        </section>
+            <!-- Gestión de Cultivos -->
+            <section id="crop-management" class="col-md-6 mb-4">
+                <div class="card">
+                    <div class="card-header bg-success text-white">
+                        <h2 class="h5 mb-0">Gestión de Cultivos</h2>
+                    </div>
+                    <div class="card-body">
+                        <ul id="crop-list" class="list-group mb-3"></ul>
+                        <form id="add-crop-form" class="d-flex">
+                            <input type="text" id="crop-name" class="form-control me-2" placeholder="Nombre del Cultivo" required>
+                            <button type="submit" class="btn btn-success">Agregar</button>
+                        </form>
+                    </div>
+                </div>
+            </section>
 
-        <section id="planting-form-section">
-            <h2>Planificar Siembra</h2>
-            <form id="planting-form">
-                <label for="crop-select">Seleccionar Cultivo:</label>
-                <select id="crop-select"></select>
-
-                <label for="area">Área (hectáreas):</label>
-                <input type="number" id="area" required>
-
-                <label for="planting-date">Fecha:</label>
-                <input type="date" id="planting-date" required>
-
-                <button type="submit">Planificar</button>
-            </form>
-        </section>
+            <!-- Planificar Siembra -->
+            <section id="planting-form-section" class="col-12">
+                <div class="card">
+                    <div class="card-header bg-success text-white">
+                        <h2 class="h5 mb-0">Planificar Siembra</h2>
+                    </div>
+                    <div class="card-body">
+                        <form id="planting-form" class="row g-3">
+                            <div class="col-md-4">
+                                <label for="crop-select" class="form-label">Seleccionar Cultivo</label>
+                                <select id="crop-select" class="form-select"></select>
+                            </div>
+                            <div class="col-md-4">
+                                <label for="area" class="form-label">Área (hectáreas)</label>
+                                <input type="number" id="area" class="form-control" required>
+                            </div>
+                            <div class="col-md-4">
+                                <label for="planting-date" class="form-label">Fecha</label>
+                                <input type="date" id="planting-date" class="form-control" required>
+                            </div>
+                            <div class="col-12 text-end">
+                                <button type="submit" class="btn btn-success">Planificar</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </section>
+        </div>
     </main>
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
