--- a/inicio.html
+++ b/inicio.html
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="inicio.html">A cerca de</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Funcionalidades</a>
+                            <a class="nav-link" href="#Funcionalidades">Funcionalidades</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Planificar</a>
@@ -95,7 +95,7 @@
         </section>
 
         <!-- Sección Funcionalidades -->
-        <section id="features" class="mb-4">
+        <section id="Funcionalidades" class="mb-4">
             <h2>Funcionalidades</h2>
             <div class="row">
                 <div class="col-md-4">
